# ironclaw

./: .gitignore  README.md  install.sh  pyproject.toml
ironclaw/: README.md  __init__.py  builder.py  config.py  exceptions.py  pyproject.toml
ironclaw/ace/: __init__.py  api.py  orchestrator.py  provisioner.py  schema.py
ironclaw/cli/: client.py  fmt.py  main.py  repl.py
ironclaw/cli/commands/: __init__.py  agent.py  audit.py  config_cmd.py  gateway.py  orch.py  providers.py  session.py  setup.py  skills.py  state.py  user.py
ironclaw/core/: agent.py  context.py  hitl.py  message.py  orchestrator.py  scheduler.py
ironclaw/examples/: multi_agent.py  secure_research.py  simple_agent.py
ironclaw/gateway/: base.py  daemon.py  imessage.py  router.py  session.py  telegram.py  whatsapp.py
ironclaw/memory/: base.py  conversation.py  shared.py
ironclaw/providers/: anthropic.py  base.py  bedrock.py  cohere.py  compat.py  factory.py  gemini.py  ollama.py  openai.py
ironclaw/security/: audit.py  guard.py  policy.py
ironclaw/skills/: manifest.py  registry.py
ironclaw/skills/builtin/code-executor/: SKILL.md
ironclaw/skills/builtin/data-analyst/: SKILL.md
ironclaw/skills/builtin/document-summarizer/: SKILL.md
ironclaw/skills/builtin/email-drafter/: SKILL.md
ironclaw/skills/builtin/email-drafter/references/: templates.md
ironclaw/skills/builtin/image-analyzer/: SKILL.md
ironclaw/skills/builtin/web-research/: SKILL.md
ironclaw/tools/: permissions.py  registry.py  sandbox.py
ironclaw/tools/builtins/: __init__.py  filesystem.py  shell.py  web.py
ironclaw/user/: __init__.py  profile.py  store.py
ironclaw/web/: server.py  ui.html
ironclaw/web/dashboard/: package-lock.json  package.json  tailwind.config.js
ironclaw/web/dashboard/src/: App.jsx  index.css
tests/: test_ace_skills.py  test_api.py  test_cli.py  test_cli_commands.py  test_core.py  test_gateways_advanced.py  test_performance.py  test_providers.py  test_security.py  test_user.py
